<resources>
    <string name="app_name">APP Detail</string>
    <string name="confirm">Confirm</string>
    <string name="system">System</string>
    <string name="third_party">Third party</string>
    <string name="debug">DEBUG</string>
    <string name="release">RELEASE</string>
    <string name="sort">Sort</string>
    <string name="rationale_storage">Refuse to read and write storage</string>
    <string name="error_storage">Failed to get permission</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="warning">Warning</string>
    <string name="new_create">Create</string>
    <string name="new_create_folder">New folder</string>
    <string name="cancel">Cancel</string>
    <string name="choose_save_path">Choose a save path</string>
    <string name="copying">Copying</string>
    <string name="signature">Signing %d:</string>
    <string name="base_info">Basic information:</string>
    <string name="signing_info">Signings:</string>
    <string name="history_signing">Signing History:</string>
    <string name="choose_apk">Select apk file</string>
    <string name="parsing">Parsing</string>
    <string name="package_name">Package Name:</string>
    <string name="launch">Launch:</string>
    <string name="compile_sdk">Compile Sdk:</string>
    <string name="target_sdk">Target Sdk:</string>
    <string name="min_sdk">Min Sdk:</string>
    <string name="version_code">Version Code:</string>
    <string name="version_name">Version Name:</string>
    <string name="time">Time:</string>
    <string name="detail_release">Release:</string>
    <string name="detail_system">System:</string>
    <string name="detail_path">APK Path:</string>
    <string name="detail_size">APK Size:</string>
    <string name="apk" translatable="false">Import apk</string>
    <string name="export">Export</string>
    <string name="saveing">Saving</string>
    <string name="select_all">Select All ( %d/%d )</string>
    <string name="multi_choice">Multiple choice</string>
</resources>
