<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/logo_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:fitsSystemWindows="true"
                android:transitionName="logo_img"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:contentInsetStartWithNavigation="0dp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:titleTextColor="@android:color/white"
                tools:title="@string/app_name" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/info_parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/base_info"
                android:textColor="?attr/colorPrimary"
                android:textSize="15sp" />

            <com.wang.getapk.view.widget.InfoItemView
                android:id="@+id/package_item_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="4dp"
                android:textIsSelectable="true"
                app:title="@string/package_name" />

            <com.wang.getapk.view.widget.InfoItemView
                android:id="@+id/launch_item_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="4dp"
                android:textIsSelectable="true"
                app:title="@string/launch" />

            <com.wang.getapk.view.widget.InfoItemView
                android:id="@+id/compile_sdk_item_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="4dp"
                app:title="@string/compile_sdk" />

            <com.wang.getapk.view.widget.InfoItemView
                android:id="@+id/target_sdk_item_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="4dp"
                app:title="@string/target_sdk" />

            <com.wang.getapk.view.widget.InfoItemView
                android:id="@+id/min_sdk_item_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="4dp"
                app:title="@string/min_sdk" />

            <com.wang.getapk.view.widget.InfoItemView
                android:id="@+id/version_item_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="4dp"
                app:title="@string/version_code" />

            <com.wang.getapk.view.widget.InfoItemView
                android:id="@+id/version_name_item_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="4dp"
                app:title="@string/version_name" />


            <com.wang.getapk.view.widget.InfoItemView
                android:id="@+id/time_item_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="4dp"
                app:title="@string/time" />


            <com.wang.getapk.view.widget.InfoItemView
                android:id="@+id/release_item_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="4dp"
                app:title="@string/detail_release" />


            <com.wang.getapk.view.widget.InfoItemView
                android:id="@+id/system_item_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="4dp"
                app:title="@string/detail_system" />


            <com.wang.getapk.view.widget.InfoItemView
                android:id="@+id/path_item_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="4dp"
                app:title="@string/detail_path" />


            <com.wang.getapk.view.widget.InfoItemView
                android:id="@+id/size_item_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="4dp"
                app:title="@string/detail_size" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/signing_info"
                android:textColor="?attr/colorPrimary"
                android:textSize="15sp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|start"
        android:layout_margin="16dp"
        android:transitionName="fab_transition"
        app:layout_anchor="@+id/app_bar"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_export" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>